# liturgical

./: .gitignore  index.html  package.json
src/: config.ts  devicecard.ts  main.ts  notify.ts  schedule.ts  styles.css  tabs.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/litnot/: Cargo.toml  build.rs
src-tauri/plugins/litnot/android/: build.gradle.kts
src-tauri/plugins/litnot/android/src/main/: AndroidManifest.xml
src-tauri/plugins/litnot/android/src/main/java/: NotificationPlugin.kt  NotificationReceiver.kt  NotificationScheduler.kt
src-tauri/plugins/litnot/permissions/autogenerated/: reference.md
src-tauri/plugins/litnot/permissions/autogenerated/commands/: cancelAll.toml  scheduleNotification.toml
src-tauri/plugins/litnot/permissions/schemas/: schema.json
src-tauri/plugins/litnot/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
